<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SafeTrade</string>
    <string name="sell_title">Sell</string>
    <string name="buy_title">Buy</string>
    <string name="generating_password">Generating password…</string>
    <string name="generating_intermediate_code">Generating intermediate code, it may take about a minute…</string>
    <string name="now_send_intermediate_code">Password is stored. Don\'t show it anyone!\nNow send intermediate code to buyer.</string>
    <string name="password_label">Password for the key:</string>
    <string name="waiting_for_confirmation_code">Send intermediate code and receive confirmation code from buyer</string>
    <string name="checking_balance">Checking balance for the received address</string>
    <string name="wait_funds_depositing">Wait for funds depositing by buyer</string>
    <string name="waiting_private_key">Waiting private key</string>
    <string name="you_should_take_funds">You should take the payment</string>
    <string name="successfully_sold">Successfully sold</string>
    <string name="checking_balance_buyer">Checking balance…</string>
    <string name="deposit_funds">Deposit funds to the generated address</string>
    <string name="waiting_item">Waiting for item delivery. Don\'t send encrypted private key before you\'ll get the purchase.</string>
    <string name="all_set">Successfully purchased item</string>
    <string name="status_unknown">Unknown status</string>
    <string name="selling">Selling</string>
    <string name="buying">Buying</string>
    <string name="bought">Bought</string>
    <string name="sold">Sold</string>
    <string name="btc_suffix">BTC</string>
    <string name="status_title">Status:</string>
    <string name="default_item_name">Unknown Item</string>
    <string name="generating_address_and_encrypted_private_key">Generating address and encrypted private key…</string>
    <string name="generating_confirmation_code">Generating confirmation code…</string>
    <string name="dialog_get_intermediate_code_title">Enter intermediate code</string>
    <string name="scan_title">Scan intermediate code</string>
    <string name="error_open_camera">Unable to open camera. </string>
    <string name="no_email_clients">No email clients installed</string>
    <string name="decoding_confirmation_code_using_password">Decoding confirmation code using your password…</string>
    <string name="not_confirmation_but_intermediate_code">It\'s an intermediate code, not a confirmation. Please ensure that your code starts with \"cfrm\".</string>
    <string name="not_confirmation_code">It isn\'t a confirmation code. Please ensure that your code starts with \"cfrm\".</string>
    <string name="confirmation_code_doesnt_match">This confirmation code doesn\'t match your password or intermediate code. Ask buyer to double-check it.</string>
    <string name="decrypting_private_key">Decrypting private key…</string>
    <string name="unable_to_decrypt_private_key">Unable to decrypt this private key using your password.</string>
    <string name="not_encrypted_private_key">It isn\'t an encrypted private key because it doesn\'t start with \"6P\".</string>
    <string name="not_address">It isn\'t a bitcoin address</string>
    <string name="take_button">Transfer %s BTC to</string>
    <string name="take_no_btc_button">Transfer BTC to</string>
    <string name="scan_confirmation_code_title">Scan confirmation code</string>
    <string name="scan_encrypted_private_key_title">Scan encrypted private key</string>
    <string name="scan_final_address_title">Scan address</string>
    <string name="scan_intermediate_code_title">Scan intermediate code</string>
    <string name="buy_state_still_loading">Wait a second, address is not ready yet.</string>
    <string name="no_wallet_installed">No installed bitcoin wallet found. Would you like to send this address to other device?</string>
    <string name="qr_code_content_description">QR code</string>
    <string name="copy">Copy</string>
    <string name="address_copied_to_clipboard">Address has been copied to clipboard.</string>
    <string name="scan">Scan</string>
    <string name="address">Address</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="your_address">your address</string>
    <string name="encrypted_private_key">Encrypted private key</string>
    <string name="send">Send…</string>
    <string name="intermediate_code">Intermediate code:</string>
    <string name="intermediate_code_hint">Intermediate code</string>
    <string name="sellers_intermediate_code">Seller\'s intermediate code:</string>
    <string name="confirmation_code_buyer_desc">Confirmation code</string>
    <string name="confirmation_code_hint">Confirmation code</string>
    <string name="address_hint">address</string>
    <string name="encrypted_private_key_buyer_desc">Encrypted private key</string>
    <string name="encrypted_private_key_hint">Encrypted private key</string>
    <string name="show_qr_code">Show QR code</string>
    <string name="deposit_funds_button">Deposit funds…</string>
    <string name="buy_step_one">1. Send this confirmation code to seller so he can verify that his password matches address below</string>
    <string name="buy_step_two">2. Deposit funds and tell seller to ship purchase</string>
    <string name="buy_step_three">3. Send encrypted private key to seller when you receive purchase. He has password to decrypt this key and take money.</string>
    <string name="sell_step_one">1. Send intermediate code to a buyer and ask for confirmation code.</string>
    <string name="sell_step_two">2. Enter confirmation code and when funds will be available send your package.</string>
    <string name="sell_step_three">3. Buyer should send encrypted private key what matches your password after delivery.</string>
    <string name="private_key_decrypted">Private key for address %s has been decrypted! Now scan your wallet address and transfer the money.</string>
    <string name="state_not_loaded_yet">Wait a second, reading state from database is in progress…</string>
    <string name="no_private_key_from_buyer">You should obtain private key first from buyer.</string>
    <string name="alert_checking_balance">Wait a second, checking address balance…</string>
    <string name="zero_balance">Address %s have zero balance.</string>
    <string name="enter_your_final_address">Please enter your wallet address.</string>
    <string name="min_miner_fee">Minimal</string>
    <string name="safe_miner_fee">Safe</string>
    <string name="max_miner_fee">Urgent TX</string>
    <string name="no_dev_fee">Nothing</string>
    <string name="med_dev_fee">Thanks!</string>
    <string name="max_dev_fee">Many Thanks!</string>
    <string name="confirm_tx_x_btc_to_addr">Please confirm transferring %1$s BTC to %2$s.</string>
    <string name="miners_fee">Miners\' fee: %s BTC</string>
    <string name="tips_for_dev">Tips for developer: %s BTC</string>
    <string name="final_tx_desc">You\'ll receive %1$s BTC.</string>
</resources>
