<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="8dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/type"
            android:text="@string/selling"
            android:textSize="16sp"
            android:textColor="@color/blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/name"
            android:text="@string/default_item_name"
            android:maxLines="2"
            android:ellipsize="end"
            android:textSize="16sp"
            android:paddingLeft="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/price"
            android:text="0.28 BTC"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:id="@+id/status"
        android:text="@string/waiting_for_confirmation_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
